# powder-playground

./: .clang-format  CMakeLists.txt  README.md
lib/raylib-4.2.0/src/: minshell.html  shell.html
res/: blur.frag
src/: common.hpp  elements.cpp  elements.hpp  main.cpp  powder_playground.cpp  powder_playground.hpp  simulation.cpp  simulation.hpp
src/util/: logger.cpp  logger.hpp
